fixes breadcrumb on mobile

--- a/components/vf-breadcrumbs/vf-breadcrumbs.scss
+++ b/components/vf-breadcrumbs/vf-breadcrumbs.scss
@@ -15,7 +15,7 @@
   }
 }
 @media (max-wdith: $vf-breakpoint--l - 1) {
-  .vf-breadcrumbs > .vf-breadcrumbs__list:first-of-type {
+  .vf-breadcrumbs__list:not(.vf-breadcrumbs__list.vr-breadcrumbs__list--related) {
     display: block;
   }
 }
